header, pointer splash and content update. footer chanegs

--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
     "@lottiefiles/dotlottie-react": "^0.12.0",
     "antd": "^5.22.7",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.487.0",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.15.1",
     "react-toastify": "^11.0.2",
     "simple-parallax-js": "^6.0.1",
     "swiper": "^11.1.15",
+    "tailwind-merge": "^3.1.0",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.172.0",
     "yup": "^1.6.1"
   },
