--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "gsap": "^3.12.5",
+    "i18next": "^25.0.0",
+    "i18next-browser-languagedetector": "^8.0.4",
     "lucide-react": "^0.487.0",
     "next": "15.1.0",
+    "next-i18next": "^15.4.2",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.15.1",
     "react-toastify": "^11.0.2",
